--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,10 @@
 		"source.fixAll": "explicit",
 		"source.organizeImports": "explicit"
 	},
-	"explorer.excludeGitIgnore": true,
-	"python.testing.pytestArgs": ["__test__"],
+	// "explorer.excludeGitIgnore": true,
+	"python.testing.pytestArgs": [
+		"__test__"
+	],
 	"python.testing.unittestEnabled": false,
 	"python.testing.pytestEnabled": true,
 	"python.analysis.autoImportCompletions": true
