--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pytest",
     "python-dotenv>=1.1.1",
+    "requests>=2.32.4",
     "rich>=14.0.0",
     "typer>=0.16.0",
 ]
